--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"></link> -->
+
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Quattrocento:400,700" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
